# USBPIP-VirtPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test.cpp  vcpkg.json
include/FredEmmott/: HIDSpec.h  USB-VirtPP.h  USBIP-VirtPP.h  USBIP.hpp  USBSpec.h  USBSpec.hpp
include/FredEmmott/USBIP-VirtPP/: Core.h  Device.h  HIDDevice.h  Mouse.h  Request.h  XPad.h
include/FredEmmott/USBSpec/: win32.h
src/: api-c.cpp  api-detail.hpp  send-recv.cpp  send-recv.hpp  test.c  test.cpp
src/api/c/: CInvoke.hpp  Device.cpp  HIDDevice.cpp  Instance.cpp  Mouse.cpp  Request.cpp  XPad.cpp  detail-Mouse.hpp  detail-RequestType.hpp  detail-XPad.hpp  detail-hid.hpp  detail.hpp  guarded_data.hpp  handles.hpp  logging.hpp  send-recv.hpp  win32-attach.cpp  win32-attach.hpp
